<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="3dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/Linear_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="2"
                android:padding="4dp"
                android:text="@string/item_name"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/item_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1.25"
                android:padding="4dp"
                android:text="@string/quantity"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/item_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1.25"
                android:padding="4dp"
                android:text="@string/rate"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/item_delete_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="0.5"
                android:padding="4dp"
                android:src="@drawable/ic_baseline_delete_24"
                app:tint="@android:color/holo_blue_light"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <TextView
            android:id="@+id/item_total_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Linear_Layout"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_toStartOf="@id/item_total_cost_amount"
            android:padding="4dp"
            android:text="@string/total_cost"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/item_total_cost_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Linear_Layout"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:padding="4dp"
            android:text="@string/amount"
            android:textColor="@color/black" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>